/*
SPDX-FileCopyrightText: 2021-present Open Networking Foundation <info@opennetworking.org>

SPDX-License-Identifier: LicenseRef-ONF-Member-1.0
*/

////////////////////// e2ap-commondatatypes.proto //////////////////////
// Protobuf generated from /e2ap_v2.0.1_Feb3_21.asn by asn1c-0.9.29
// E2AP-CommonDataTypes { iso(1) identified-organization(3) dod(6) internet(1) private(4) enterprise(1) 53148 e2(1) version2(2) e2ap(1) e2ap-CommonDataTypes(3) }

syntax = "proto3";

package e2ap.v2beta1;
option go_package = "github.com/onosproject/onos-e2t/api/e2ap/v2beta1/e2ap-commondatatypes";

import "validate/v1/validate.proto";

// enumerated from e2ap_v2.0.1_Feb3_21.asn:1543
enum Criticality {
    CRITICALITY_REJECT = 0;
    CRITICALITY_IGNORE = 1;
    CRITICALITY_NOTIFY = 2;
};

//{-}
message CriticalityReject {
    Criticality criticality = 1 [(validate.v1.rules).enum.const = 0]; //CRITICALITY_REJECT
}

//{-}
message CriticalityIgnore {
    Criticality criticality = 1 [(validate.v1.rules).enum.const = 1]; //CRITICALITY_IGNORE
}

//{-}
message CriticalityNotify {
    Criticality criticality = 1 [(validate.v1.rules).enum.const = 2]; //CRITICALITY_NOTIFY
}

// enumerated from e2ap_v2.0.1_Feb3_21.asn:1545
enum Presence {
    PRESENCE_OPTIONAL = 0;
    PRESENCE_CONDITIONAL = 1;
    PRESENCE_MANDATORY = 2;
};

//{-}
message PresenceOptional {
    Presence presence = 1 [(validate.v1.rules).enum.const = 0]; //PRESENCE_OPTIONAL
}

//{-}
message PresenceConditional {
    Presence presence = 1 [(validate.v1.rules).enum.const = 1]; //PRESENCE_CONDITIONAL
}

//{-}
message PresenceMandatory {
    Presence presence = 1 [(validate.v1.rules).enum.const = 2]; //PRESENCE_MANDATORY
}

// enumerated from e2ap_v2.0.1_Feb3_21.asn:1551
enum TriggeringMessage {
    TRIGGERING_MESSAGE_INITIATING_MESSAGE = 0;
    TRIGGERING_MESSAGE_SUCCESSFUL_OUTCOME = 1;
    TRIGGERING_MESSAGE_UNSUCCESSFULL_OUTCOME = 2;
};

// range of Integer from e2ap_v2.0.1_Feb3_21.asn:1547
// {ProcedureCode}
message ProcedureCode {
    int32 value = 1 [(validate.v1.rules).int32 = {gte: 0, lte: 255}, json_name="value"];
};

// range of Integer from e2ap_v2.0.1_Feb3_21.asn:1549
// {ProtocolIE-ID}
message ProtocolIeId {
    int32 value = 1 [(validate.v1.rules).int32 = {gte: 0, lte: 65535}, json_name="value"];
};

//{-}
message RiccallProcessId {
    bytes value = 1;
}

//{-}
message RiccontrolHeader {
    bytes value = 1;
}

//{-}
message RiccontrolMessage {
    bytes value = 1;
}

//{-}
message RiccontrolOutcome {
    bytes value = 1;
}

//{-}
message RicindicationHeader {
    bytes value = 1;
}

//{-}
message RicindicationMessage {
    bytes value = 1;
}

//{-}
message RanfunctionDefinition {
    bytes value = 1;
}

//{-}
message RanfunctionOid {
    bytes value = 1;
}

//{-}
message PlmnIdentity {
    bytes value = 1 [(validate.v1.rules).bytes.len = 3];
}

//{-}
message RiceventTriggerDefinition {
    bytes value = 1;
}

//{-}
message RicactionDefinition {
    bytes value = 1;
}

//{-}
message BitString {
    bytes value = 1;
    uint32 len = 2;
}
