/*
SPDX-FileCopyrightText: 2020-present Open Networking Foundation <info@opennetworking.org>

SPDX-License-Identifier: LicenseRef-ONF-Member-1.0
*/
syntax = "proto3";

import "GNB-ID-Choice.proto";

package e2ctypes;

message GlobalgNB_ID_t {
    string	 plmn_id = 1;
    GNB_ID_Choice_t	 gnb_id = 2;
}